# users/serializer.py
@@ -5,7 +5,11 @@ from django.db.models.signals import *
 from django.db.models.signals import post_save
 
 
+from rest_framework import serializers
+
 class UserSerializer(serializers.ModelSerializer):
+    password = serializers.CharField(write_only=True, required=False)
+
     class Meta:
         model = User
         fields = ['id', 'first_name', 'last_name', 'email', 'password']
@@ -17,9 +21,17 @@ class UserSerializer(serializers.ModelSerializer):
         password = validated_data.pop('password', None)
         instance = self.Meta.model(**validated_data)
 
-        for signal in [pre_save, pre_init, pre_delete, post_save, post_delete, post_init]:
-            # print a List of connected listeners
-             print(signal.receivers)
+        if password is not None:
+            instance.set_password(password)
+        instance.save()
+        return instance
+
+    def update(self, instance, validated_data):
+        password = validated_data.pop('password', None)
+
+        for key, value in validated_data.items():
+            setattr(instance, key, value)
+
         if password is not None:
             instance.set_password(password)
         instance.save()
@@ -29,3 +41,6 @@ class UserSerializer(serializers.ModelSerializer):
 class LoginSerializer(serializers.Serializer):
     email = serializers.CharField(max_length=255)
     password = serializers.CharField(max_length=255)
+
+class ChangePasswordSerializer(serializers.Serializer):
+    new_password = serializers.CharField(required=True)
